Changing site to be dark-themed. Changes in various _scss files, mainly variables. Also some changes in navigation.scss related to fixing the spacing around Previous/Next buttons (reduced spacing above, increased spacing below). Also a change in base.scss to remove double underline beneath DOwnload PDF links.

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -64,7 +64,7 @@ p {
 u,
 ins {
   text-decoration: none;
-  border-bottom: 1px solid $text-color;
+  // border-bottom: 1px solid $text-color; // created double underline on links
   a {
     color: inherit;
   }
