--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -44,7 +44,7 @@ $type-size-8                : 0.625em;  // ~10px
 
 
 /*
-   Colors
+   Colours
    ========================================================================== */
 
 $gray                       : #7a8288;
@@ -53,18 +53,29 @@ $darker-gray                : mix(#000, $gray, 60%);
 $light-gray                 : mix(#fff, $gray, 50%);
 $lighter-gray               : mix(#fff, $gray, 90%);
 
-$body-color                 : #fff;
-$background-color           : #fff;
-$code-background-color      : #fafafa;
-$code-background-color-dark : $light-gray;
-$text-color                 : $dark-gray;
-$border-color               : $lighter-gray;
 
-$primary-color              : #7a8288;
+// Light theme original values:
+// $body-color                 : #fff;
+// $background-color           : #fff;
+// $code-background-color      : #fafafa;
+// $code-background-color-dark : $light-gray;
+// $text-color                 : $dark-gray;
+// $border-color               : $lighter-gray;
+
+// Dark theme values:
+$body-color                 : #252a34;
+$background-color           : #252a34;
+$code-background-color      : mix(#000, $background-color, 15%);
+$code-background-color-dark : mix(#000, $background-color, 20%);
+$text-color                 : $light-gray;
+$border-color               : mix(#fff, $background-color, 30%);
+
+$primary-color              : #86b9bf; // dark theme value
+// $primary-color              : #7a8288; // light theme original value
 $success-color              : #62c462;
 $warning-color              : #f89406;
 $danger-color               : #ee5f5b;
-$info-color                 : #52adc8;
+$info-color                 : #93dbe1; // changed when switching to dark theme
 
 /* brands */
 $behance-color              : #1769FF;
@@ -72,7 +83,7 @@ $dribbble-color             : #ea4c89;
 $facebook-color             : #3b5998;
 $flickr-color               : #ff0084;
 $foursquare-color           : #0072b1;
-$github-color               : #171516;
+$github-color               : $text-color;
 $google-plus-color          : #dd4b39;
 $instagram-color            : #517fa4;
 $lastfm-color               : #d51007;
@@ -90,11 +101,26 @@ $xing-color                 : #006567;
 
 
 /* links */
-$link-color                 : $info-color;
-$link-color-hover           : mix(#000, $link-color, 25%);
-$link-color-visited         : mix(#fff, $link-color, 25%);
-$masthead-link-color        : $primary-color;
-$masthead-link-color-hover  : mix(#000, $primary-color, 25%);
+// Light theme original values:
+// $link-color                 : $info-color;
+// $link-color-hover           : mix(#000, $link-color, 25%);
+// $link-color-visited         : mix(#fff, $link-color, 25%);
+// $masthead-link-color        : $primary-color;
+// $masthead-link-color-hover  : mix(#000, $primary-color, 25%);
+
+// Dark theme values:
+$link-color                 : $info-color !default;
+$link-color-hover           : mix(#07032f, $link-color, 25%) !default;
+$link-color-visited         : mix(#fff, $link-color, 15%) !default;
+$masthead-link-color        : $primary-color !default;
+$masthead-link-color-hover  : mix(#000, $primary-color, 25%) !default;
+$navicon-link-color-hover   : mix(#fff, $primary-color, 75%) !default;
+
+// stuff for the hamburger that appears on mobile and associated dropdown menu
+$navicon-background-color   : mix(#000, $background-color, 30%);
+$navicon-stripes-color      : $primary-color;
+$link-dropdown-color        : mix(#000, $background-color, 30%);
+$link-dropdown-border-color : $border-color;
 
 
 /*
